--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
   <body>
 
-sunday2
+<a href="https://member.slothub777.com/"> </a>
+<a href="https://gameswin888.com/"> </a>
 
 </body>
 </html>
