--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
   <body>
 
-<a href="https://member.slothub777.com/"> </a>
-<a href="https://gameswin888.com/"> </a>
+<a href="https://www.truehomes24.com/"> </a>
+<a href="https://www.bauc14.edu.iq/"> </a>
 
 </body>
 </html>
