--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name='dmca-site-verification' content='VkVzWm0vY0dwV1hla0loWk5YbDk0QT090' />
 </head>
   <body>
 <a href="https://www.perubalsam.com/"> </a>
